--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/styles/_variables.sass'
+
+// reset
+html,body
+    margin: 0
+    padding: 0
+    height: 100%
+    width: 100%
+
+// generic
+#app
+    height: 100%
+
+.container
+    padding: 1rem
+
+.bg--green
+    background-color: $color-green
+.bg--red
+    background-color: $color-red
+.bg--orange
+    background-color: $color-orange
+    
+.grid
+    display: flex
+.col-4
+    flex: 0 0 33.33%
+    padding: 0 0.5rem
+    box-sizing: border-box
+.mt-1
+    margin-top: 1rem
+.mt-2
+    margin-top: 2rem
+.mr-1
+    margin-right: 1rem
