--- a/src/app/pages/kanban/kanban.component.html
+++ b/src/app/pages/kanban/kanban.component.html
@@ -1,12 +1,13 @@
 <div class="container">
-    <a [routerLink]="['/task']" class="mainnav__link">Close</a>
-    <a [routerLink]="['/task/new']" class="mainnav__link">New</a>
-    <a [routerLink]="['/task/kanban']" class="mainnav__link">Kanban</a>
+    <ul>
+        <li><a [routerLink]="['/kanban/list']" class="mainnav__link">= List </a></li>
+        <li><a [routerLink]="['/kanban/board']" class="mainnav__link"> | | | Board</a></li>
+    </ul>
 
     <router-outlet></router-outlet>
 
     <div class="mt-2">
         <status-button [text]="'list.addTaskButton' | translate" [class]="'status-button--inline'" (click)="goToAdd()"></status-button>
     </div>
-    <modal *ngIf="modalDetails" [task]="modalDetails" (cerrarModal)="modalDetails = null"></modal>
+    <task-detail-modal *ngIf="getTaskDetails()" [task]="getTaskDetails()" (cerrarModal)="setTaskDetails(null)"></task-detail-modal>
 </div>
