--- a/src/app/pages/add-task/add-task.component.html
+++ b/src/app/pages/add-task/add-task.component.html
@@ -28,6 +28,7 @@
         </div>
         <div class="mt-2">
             <button type="submit">{{'newTask.form.sendButton' | translate}}</button>
+            <button type="button" (click)="back()">{{'newTask.form.cancelButton' | translate}}</button>
         </div>
     </form>
 </div>
