--- a/src/app/pages/kanban/kanban.component.html
+++ b/src/app/pages/kanban/kanban.component.html
@@ -1,7 +1,9 @@
+
 <div class="container">
+
     <ul>
-        <li><a [routerLink]="['/kanban/list']" class="mainnav__link">= List </a></li>
-        <li><a [routerLink]="['/kanban/board']" class="mainnav__link"> | | | Board</a></li>
+        <li><a [routerLink]="['/kanban/list']" class="mainnav__link">List</a></li>
+        <li><a [routerLink]="['/kanban/board']" class="mainnav__link">Board</a></li>
     </ul>
 
     <router-outlet></router-outlet>
