--- a/src/app/pages/kanban/kanban.component.html
+++ b/src/app/pages/kanban/kanban.component.html
@@ -1,11 +1,6 @@
-
+<view-menu></view-menu>
+<kanban-filter></kanban-filter>
 <div class="container">
-
-    <ul>
-        <li><a [routerLink]="['/kanban/list']" class="mainnav__link">List</a></li>
-        <li><a [routerLink]="['/kanban/board']" class="mainnav__link">Board</a></li>
-    </ul>
-
     <router-outlet></router-outlet>
 
     <div class="mt-2">
