--- a/src/app/components/kanban-board/kanban-card/kanban-card.component.sass
+++ b/src/app/components/kanban-board/kanban-card/kanban-card.component.sass
@@ -3,6 +3,7 @@
     border-radius: 0.4rem
     margin-top: 1rem
     padding: 0.5rem
+    min-width: 200px
     &__title
         font-weight: 800
         margin-bottom: 1rem
