--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -2,7 +2,7 @@
     <h1>{{'list.title' | translate}}</h1>
     <div class="mt-2">
         <label class="mr-1" for="filterName">{{'list.filter' | translate}}</label>
-        <input type="search" id="filterName" [value]="getFilterName()" [placeholder]="'kanban.filter.name' | translate" (input)="setfilterName($event.target.value)">
+        <input type="text" id="filterName" [value]="getFilterName()" (input)="setfilterName($event.target.value)">
     </div>
 
     <kanban-list></kanban-list>
