--- a/src/app/pages/layout/main-nav/main-nav.component.html
+++ b/src/app/pages/layout/main-nav/main-nav.component.html
@@ -4,6 +4,7 @@
         <li class="mainnav__list-item"><a [routerLink]="['/board']" class="mainnav__link">{{ 'mainNav.kanban' | translate}}</a></li>
         <li class="mainnav__list-item"><a [routerLink]="['/kanban']" class="mainnav__link">{{ 'mainNav.kanban_v2' | translate}}</a></li>
         <li class="mainnav__list-item"><a [routerLink]="['/other']" class="mainnav__link">{{ 'mainNav.others' | translate}}</a></li>
+        <li class="mainnav__list-item"><a [routerLink]="['/test']" class="mainnav__link">{{ 'mainNav.test' | translate}}</a></li>
     </ol>
     <div class="mainnav__bottom">
         <button class="mainnav__language" class="{{ !isSpanish() ? 'mainnav__language--active' : ''}}" (click)="changeLocale('en')">English</button>
