--- a/src/app/pages/layout/main-nav/main-nav.component.html
+++ b/src/app/pages/layout/main-nav/main-nav.component.html
@@ -1,8 +1,6 @@
 <nav class="mainnav">
     <ol class="mainnav__list">
-        <li class="mainnav__list-item"><a [routerLink]="['/list']" class="mainnav__link">{{ 'mainNav.list' | translate}}</a></li>
-        <li class="mainnav__list-item"><a [routerLink]="['/board']" class="mainnav__link">{{ 'mainNav.kanban' | translate}}</a></li>
-        <li class="mainnav__list-item"><a [routerLink]="['/kanban']" class="mainnav__link">{{ 'mainNav.kanban_v2' | translate}}</a></li>
+        <li class="mainnav__list-item"><a [routerLink]="['/tasks']" class="mainnav__link">{{ 'mainNav.tasks' | translate}}</a></li>
         <li class="mainnav__list-item"><a [routerLink]="['/other']" class="mainnav__link">{{ 'mainNav.others' | translate}}</a></li>
         <li class="mainnav__list-item"><a [routerLink]="['/test']" class="mainnav__link">{{ 'mainNav.test' | translate}}</a></li>
     </ol>
