--- a/src/app/components/kanban-board/kanban-board.component.html
+++ b/src/app/components/kanban-board/kanban-board.component.html
@@ -1,21 +1,9 @@
 <div class="mt-2">
     <div class="grid">
-        <div class="col-4">
-            <div class="kanbancol bg--red">
-                <div class="kanbancol__title">{{'kanban.column.todo' | translate}}</div>
-                <kanban-card *ngFor="let task of filterTaskByStatus('to do')" [task]="task" [users]="getUsersNames(task.users)" (showDetail)="openDetails($event)" (changeStatus)="changeStatus($event)"></kanban-card>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="kanbancol bg--green">
-                <div class="kanbancol__title">{{'kanban.column.doing' | translate}}</div>
-                <kanban-card *ngFor="let task of filterTaskByStatus('doing')" [task]="task" [users]="getUsersNames(task.users)" (showDetail)="openDetails($event)" (changeStatus)="changeStatus($event)"></kanban-card>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="kanbancol bg--orange">
-                <div class="kanbancol__title">{{'kanban.column.done' | translate}}</div>
-                <kanban-card *ngFor="let task of filterTaskByStatus('done')" [task]="task" [users]="getUsersNames(task.users)" (showDetail)="openDetails($event)" (changeStatus)="changeStatus($event)"></kanban-card>
+        <div class="col-4" *ngFor="let group of getGroups()">
+            <div class="kanbancol bg--group bg--group{{getColor(group)}}">
+                <div class="kanbancol__title">{{getGroupName(group)}}</div><!-- {{'kanban.column.group' | translate}}</div> -->
+                <kanban-card *ngFor="let task of filterTaskGroup(group)" [task]="task" [users]="getUsersNames(task.users)" (showDetail)="openDetails($event)" (changeStatus)="changeStatus($event)"></kanban-card>
             </div>
         </div>
     </div>
