--- a/src/app/components/kanban-board/kanban-board.component.sass
+++ b/src/app/components/kanban-board/kanban-board.component.sass
@@ -1,3 +1,5 @@
+@import './../../../app/styles/_variables.sass'
+
 .kanbancol
     padding: .5rem
     border-radius: 0.4rem
@@ -7,3 +9,12 @@
 
 .grid
     overflow-x: auto
+
+.bg--group
+    background: $color-grey-02
+    &__doing
+        background: $color-green
+    &__todo
+        background: $color-red
+    &__done
+        background: $color-orange
