--- a/src/app/pages/add-task/add-task.component.html
+++ b/src/app/pages/add-task/add-task.component.html
@@ -1,21 +1,21 @@
 <div class="container">
-    <h1>{{'newTask.title' | translate}}</h1>
+    <h1>{{'task.new.title' | translate}}</h1>
 
     <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
         <div class="mt-1">
-            <label class="mr-1">{{'newTask.form.name' | translate}}</label>
+            <label class="mr-1">{{'task.new.form.name' | translate}}</label>
             <input id="name" type="text" formControlName="name">
         </div>
         <div class="mt-1">
-            <label class="mr-1">{{'newTask.form.dateFrom' | translate}}</label>
+            <label class="mr-1">{{'task.new.form.dateFrom' | translate}}</label>
             <input id="dateFrom" type="date" formControlName="dateFrom">
         </div>
         <div class="mt-1">
-            <label class="mr-1">{{'newTask.form.dateTo' | translate}}</label>
+            <label class="mr-1">{{'task.new.form.dateTo' | translate}}</label>
             <input id="dateTo" type="date" formControlName="dateTo">
         </div>
         <div class="mt-1">
-            <label class="mr-1">{{'newTask.form.status' | translate}}</label>
+            <label class="mr-1">{{'task.new.form.status' | translate}}</label>
             <select id="status" formControlName="status">
                 <option value="to do">To do</option>
                 <option value="doing">Doing</option>
@@ -23,12 +23,12 @@
             </select>
         </div>
         <div class="mt-1">
-            <label class="mr-1">{{'newTask.form.description' | translate}}</label>
+            <label class="mr-1">{{'task.new.form.description' | translate}}</label>
             <textarea id="description" formControlName="description"></textarea>
         </div>
         <div class="mt-2">
-            <button type="submit">{{'newTask.form.sendButton' | translate}}</button>
-            <button type="button" (click)="back()">{{'newTask.form.cancelButton' | translate}}</button>
+            <button type="submit">{{'task.new.form.sendButton' | translate}}</button>
+            <button type="button" (click)="back()">{{'task.new.form.cancelButton' | translate}}</button>
         </div>
     </form>
 </div>
