--- a/src/app/pages/tasks/task.component.html
+++ b/src/app/pages/tasks/task.component.html
@@ -1,10 +1,11 @@
 <view-menu></view-menu>
-<kanban-filter></kanban-filter>
+<task-filter></task-filter>
+<task-group></task-group>
 <div class="container">
     <router-outlet></router-outlet>
 
     <div class="mt-2">
-        <status-button [text]="'list.addTaskButton' | translate" [class]="'status-button--inline'" (click)="goToAdd()"></status-button>
+        <status-button [text]="'task.addButton' | translate" [class]="'status-button--inline'" (click)="goToAdd()"></status-button>
     </div>
     <task-detail-modal *ngIf="getTaskDetails()" [task]="getTaskDetails()" (cerrarModal)="setTaskDetails(null)"></task-detail-modal>
 </div>
